objects/CameleonCPQ__QuoteRelease__c.object
<CustomObject>
    <description>PROS Smart CPQ Quote Release</description>
    <fields>
        <fullName>CameleonCPQ__AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>CameleonQuoteReleases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__BillingCity__c</fullName>
        <label>Bill To City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__BillingCountry__c</fullName>
        <label>Bill To Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__BillingName__c</fullName>
        <label>Bill To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__BillingPostalCode__c</fullName>
        <label>Bill To Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__BillingState__c</fullName>
        <label>Bill To State/Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__BillingStreet__c</fullName>
        <label>Bill To Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__CommPctPrice1__c</fullName>
        <description>Commission percentage applicable on Price1</description>
        <label>Commission 1 %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__CommPctPrice2__c</fullName>
        <description>Commission percentage applicable on Price2</description>
        <label>Commission 2 %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__Expires__c</fullName>
        <description>Expiration Date</description>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__PROS_SoldToCity__c</fullName>
        <label>Sold To City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__PROS_SoldToCountry__c</fullName>
        <label>Sold To Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__PROS_SoldToName__c</fullName>
        <label>Sold To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__PROS_SoldToPostalCode__c</fullName>
        <label>Sold To Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__PROS_SoldToState__c</fullName>
        <label>Sold To State/Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__PROS_SoldToStreet__c</fullName>
        <label>Sold To Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__ParentAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the parent account</description>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>CameleonQuoteReleasesParentAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__PrimaryContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact Id</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>CameleonQuoteReleases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__QuoteId__c</fullName>
        <description>Parent Quote ID</description>
        <label>QuoteId</label>
        <referenceTo>CameleonCPQ__Quote__c</referenceTo>
        <relationshipName>QuoteReleases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__ReleaseNumber__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Release number</description>
        <label>Release Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__ShippingCity__c</fullName>
        <label>Ship To City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__ShippingCountry__c</fullName>
        <label>Ship To Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__ShippingName__c</fullName>
        <label>Ship To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__ShippingPostalCode__c</fullName>
        <label>Ship To Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__ShippingState__c</fullName>
        <label>Ship To State/Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__ShippingStreet__c</fullName>
        <label>Ship To Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__SoldToCity__c</fullName>
        <label>Sold To City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__SoldToCountry__c</fullName>
        <label>Sold To Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__SoldToName__c</fullName>
        <label>Sold To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__SoldToPostalCode__c</fullName>
        <label>Sold To Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__SoldToState__c</fullName>
        <label>Sold To State/Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__SoldToStreet__c</fullName>
        <label>Sold To Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__Status__c</fullName>
        <description>Quote Status</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Needs Review</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Presented</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CameleonCPQ__TotalComm1__c</fullName>
        <label>Total Commission 1</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__TotalComm2__c</fullName>
        <label>Total Commission 2</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__TotalPrice1__c</fullName>
        <description>Total Price1</description>
        <label>Total Price 1</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__TotalPrice2__c</fullName>
        <description>Total Price2</description>
        <label>Total Price 2</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>PROS Quote Release</label>
    <nameField>
        <label>Quote Release Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PROS Quote Releases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>